<resources>
    <string name="app_name">MusicPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_login_or_sing_up_one">To access your library of music including
    </string>
    <string name="description_login_or_sing_up_two">your synced songs, please login or</string>
    <string name="description_login_or_sing_up_three">signup for a new account.</string>
    <string name="choose_login">Login to MusicPlayer</string>
    <string name="choose_sing_up">Signup For New Account</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_dialog">SignUp MusicPlayer</string>
    <string name="message_null_username_or_password">UserName or Password are Empty</string>
    <string name="login_dialog">Login MusicPlayer</string>
    <string name="message_wrong_username_or_password">UserName or Password is Wrong</string>
    <string name="or">or</string>
    <string name="user_is_login">%s is Login</string>
    <string name="gone_view">gone</string>
    <string name="visible_view">visible</string>
    <string name="notification_channel_id">channel_id</string>

</resources>